<resources>
    <string name="app_name">part_2</string>
    <string name="todo">TODO</string>

    <string name="title_dynamic">DYNAMIC LIST</string>
    <string name="name_dynamic">NAME</string>
    <string name="add_dynamic">ADD</string>
    <string-array name="fruits_dynamic">
        <item>apple</item>
        <item>banana</item>
        <item>mellon</item>
        <item>grape</item>
        <item>kiwi</item>
        <item>cherry</item>
    </string-array>

    <string name="title_simple">SIMPLE LIST</string>
    <string name="name_simple">NAME</string>
    <string name="area_simple">AREA</string>

    <string name="title_address">Address Book</string>
    <string name="name_address">NAME</string>
    <string name="phone_address">PHONE</string>
    <string name="email_address">EMAIL</string>
    <string name="add_address">ADD</string>
    <string name="delete_address">DEL</string>
    <string name="nothing_address">NOTHING</string>
</resources>